# vehicle_routing

./: .env  README.md  Untitled.ipynb  pyproject.toml
artifacts/improve_start_gap/: runs_average.csv
artifacts/n_instances/: data_n_train_instances_3_n_test_instances_10_n_vehicles_3_n_locations_20.pkl  data_n_train_instances_4_n_test_instances_10_n_vehicles_3_n_locations_20.pkl  data_n_train_instances_5_n_test_instances_10_n_vehicles_3_n_locations_20.pkl  data_n_train_instances_6_n_test_instances_10_n_vehicles_3_n_locations_20.pkl  data_n_train_instances_9_n_test_instances_10_n_vehicles_3_n_locations_20.pkl  run.csv
artifacts/n_locations/: data_n_train_instances_10_n_test_instances_10_n_vehicles_3_n_locations_22.pkl  data_n_train_instances_10_n_test_instances_10_n_vehicles_3_n_locations_24.pkl  data_n_train_instances_10_n_test_instances_10_n_vehicles_3_n_locations_26.pkl  data_n_train_instances_10_n_test_instances_10_n_vehicles_3_n_locations_27.pkl
artifacts/n_locations_gaussian_process_regressor/: data_n_train_instances_10_n_test_instances_10_n_vehicles_3_n_locations_20.pkl  data_n_train_instances_10_n_test_instances_10_n_vehicles_3_n_locations_22.pkl  data_n_train_instances_10_n_test_instances_10_n_vehicles_3_n_locations_23.pkl
artifacts/n_locations_gradient_boosting_regressor/: data_n_train_instances_10_n_test_instances_10_n_vehicles_3_n_locations_21.pkl  (+4 more)
notebooks/: analysis.ipynb
src/: experiment_1.py  experiment_1_new.py  experiment_2_n_locations.py  experiment_2_n_vehicles.py  experiment_4_gradient_boosting.py  fit.py  model.py
src/data/: generate.py  (+3 more)
(+42 files in other folders)
